--- a/locale/en_US/metadata.properties
+++ b/locale/en_US/metadata.properties
@@ -7,7 +7,7 @@ defaultProperty.help = Defines the name of the default property of the component
 deprecated.help = Marks a class or class element as deprecated
 effect.help = Defines the MXML property name for the effect
 embed.help = Imports JPEG, GIF, PNG, SVG, and SWF files at compile time
-event.help = Defines the MXML property for an event
+event.help = Defines a event
 exclude.help = Omits the class element from the Flash Builder tag inspector
 excludeClass.help = Omits the class from the Flex Builder tag inspector
 hostComponent.help = Specifies the host component for a Spark skin class
