Transferred from the Adobe Open Source Subversion Repository
Revision: 17113
Author:   sramaswa@adobe.com
Date:     2010-07-29T06:30:10.136074Z

Log Message: 
-----------
Modified the properties file to match the one currently being used in FB. 
This would be updated in future by SDK team with proper help strings.

QE notes: None
Doc notes:  None
Bugs:  None
Reviewer:  None
Tests run:  None
Is noteworthy for integration:  None

Modified Paths:
--------------
/private/flex/sdk/branches/hero_private/frameworks/locale/en_US/metadata.properties

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk@1247913 13f79535-47bb-0310-9956-ffa450edef68

--- a/frameworks/locale/en_US/metadata.properties
+++ b/frameworks/locale/en_US/metadata.properties
@@ -7,7 +7,7 @@ defaultProperty.help = Defines the name of the default property of the component
 deprecated.help = Marks a class or class element as deprecated
 effect.help = Defines the MXML property name for the effect
 embed.help = Imports JPEG, GIF, PNG, SVG, and SWF files at compile time
-event.help = Defines the MXML property for an event
+event.help = Defines a event
 exclude.help = Omits the class element from the Flash Builder tag inspector
 excludeClass.help = Omits the class from the Flex Builder tag inspector
 hostComponent.help = Specifies the host component for a Spark skin class
