--- a/locale/en_US/metadata.properties
+++ b/locale/en_US/metadata.properties
@@ -1,27 +1,24 @@
-accessibilityClass.help = Specifies the class implementing the accessibility for this component
-alternative.help = Specifies a replacement class for an existing class
-arrayElementType.help = Defines the allowed data type of each element of an Array
-bindable.help = Enable data binding
-collapseWhiteSpace.help = ! Place holder !
-defaultProperty.help = Defines the name of the default property of the component when you use the component in an MXML file
-deprecated.help = Marks a class or class element as deprecated
-effect.help = Defines the MXML property name for the effect
-embed.help = Imports JPEG, GIF, PNG, SVG, and SWF files at compile time
-event.help = Defines a event
-exclude.help = Omits the class element from the Flash Builder tag inspector
-excludeClass.help = Omits the class from the Flex Builder tag inspector
-hostComponent.help = Specifies the host component for a Spark skin class
-iconFile.help = Identifies the filename for the icon that represents the component
-inspectable.help = Defines an attribute exposed to component users 
-instanceType.help = Specifies the allowed data type of a property of type IDeferredInstance 
-managed.help =  ! Place holder !
-nonCommitingChangeEvent.help = Identifies an event as an interim trigger. 
-percentProxy.help =  ! Place holder !
-remoteClass.help = Maps the ActionScript object to a Java object
-resourceBundle.help =  ! Place holder !
-richTextContent.help = Indicate that the value of a property in MXML should always be interpreted by the compiler as a String
-skinPart.help = Define a property of a component that corresponds to a skin part
-skinState.help = Defines the view states that a component's skin must support
-style.help = Define a style property
-swf.help = Specifies attributes of the application
-transient.help = Identifies a property that should be omitted from data that is sent to the server
+accessibilityClass.help = Specifies a helper class that implements this component's accessibility behavior.
+alternative.help = Specifies a recommended replacement for this class.
+arrayElementType.help = Specifies the allowed data type for the elements of this Array.
+bindable.help = Indicates that this property or method, or all the properties of this class, are able to be used in databinding expressions.
+defaultProperty.help = Specifies which property of this class can be set in MXML without enclosing its value in a property tag.
+deprecated.help = Marks this property, method, or class as being obsolete and no longer recommended for use.
+embed.help = Embeds an asset file (such as JPEG, PNG, MP3, XML, etc.) into a SWF, and initializes this variable to the corresponding asset class.
+event.help = Declares an event that this class dispatches.
+exclude.help = Omits a specified property, method, style, or event of this class from Flash Builder's code hints and from ASDoc.
+excludeClass.help = Omits this class from Flash Builder's code hints and from ASDoc.
+hostComponent.help = Specifies the SkinnableComponent that will use this Spark skin.
+iconFile.help = Specifies an icon to represent this component in Flash Builder.
+inspectable.help = Specifies how this property appears in Flash Builder's property inspector. Also used to specify the allowed values in MXML for a property of type String.
+managed.help = Indicates that LCDS should monitor all modifications (create/update/delete) to instances of this class. Managed classes are automatically bindable.
+nonCommitingChangeEvent.help = Specifies the event that indicates fine-grained value changes to this property, such as modifications in a TextInput prior to confirmation.
+percentProxy.help = Specifies a percent-based property that corresponds to this property. For example, width="100%" in MXML sets percentWidth to 100 in ActionScript.
+remoteClass.help = Specifies the remote class corresponding to this class for AMF serialization.
+resourceBundle.help = Indicates that this class uses a particular resource bundle, so that the bundle gets compiled into the SWF.
+richTextContent.help = Indicates that all characters should be interpreted literally as text when this property is set using character data in MXML.
+skinPart.help = Indicates that the value of this property is a skin part in this component's skin.
+skinState.help = Declares a view state that this component's skin must support.
+style.help = Declares a CSS style that this component supports.
+swf.help = Specifies information for the SWF header of this ActionScript application.
+transient.help = Indicates that this property should not participate in AMF serialization.
