--- a/locale/pt_BR/metadata.properties
+++ b/locale/pt_BR/metadata.properties
@@ -10,7 +10,7 @@ exclude.help = Omite das dicas de código do Flash Builder e do ASDoc uma propri
 excludeClass.help = Omite essa classe das dicas de código do Flash Builder e do ASDoc.
 hostComponent.help = Especifica o componente encapável que será usado nessa capa de Spark.
 iconFile.help = Especifica um ícone para representar esse componente no Flash Builder.
-inspectable.help = Especifica como essa propriedade aparece no inspetor de propriedades do Flash Builder. Também usado para especificar os valores permitidos em MXML para uma propriedade do tipo seqüência de caracteres.
+inspectable.help = Especifica como essa propriedade aparece no inspetor de propriedades do Flash Builder. Também usado para especificar os valores permitidos em MXML para uma propriedade do tipo sequência de caracteres.
 managed.help = Indica que LCDS deve monitorar todas as modificações (criar/atualizar/excluir) feitas nas instâncias dessa classe. Classes gerenciadas são automaticamente ligáveis.
 nonCommitingChangeEvent.help = Especifica o evento que indica alterações de valor refinadas feitas nessa propriedade, como modificações em uma entrada de texto antes da confirmação.
 percentProxy.help = Especifica uma propriedade baseada em porcentagem que corresponde a essa propriedade. Por exemplo, largura="100%" em MXML define a porcentagem de largura como 100 em ActionScript.
